[package]
name = "pkg"
version = "0.1.0"
authors = ["TeamXEX"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.4"
tar = "0.4.40"
zip = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
semver = "1.0"
target-lexicon = "0.12.14"
tokio = { version = "1", features = ["full"] }
crossterm = "0.27.0"
libgit2-sys = "0.16.2"